[tool.poetry]
name = "pyunitx"
version = "0.2.0"
description = "First-class manipulation of physical quantities"
authors = ["Nick Thurmes <nthurmes@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
sigfig = "^1.3.2"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.4"
pytest = "^7.0"
lz4 = "^4.0.2"
Sphinx = "^5.2.0.post0"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-rP",
    "--doctest-glob=README.md",
]
